<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_stock"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        style="@style/TitleLight"/>

    <edu.feup.stockportfolio.ui.InstantAutoCompleteTextView
        android:id="@+id/tick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tick"
        android:inputType="text"
        android:nextFocusDown="@+id/shares"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/shares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shares"
        android:inputType="number"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_to_portfolio" />

</LinearLayout>